[ci] Use already existing objects instead of creating new ones